bk_ida/gccida/g0/display_target_options
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/display_target_options/src/toplev.c:4207:7: error: use of undeclared identifier 'displayed_5'
if ( !displayed_5 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/display_target_options/src/toplev.c:4209:1: error: use of undeclared identifier 'displayed_5'
displayed_5 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/display_target_options/src/obj/toplev.o] Error 1
